--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "bugs": {
+    "url": "https://github.com/RxNunez/Age/issues"
+  },
+  "homepage": "https://github.com/RxNunez/Age#readme"
 }
